--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>develop2</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but develop2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <title>Сигареты</title>
+    <script src="https://yastatic.net/share2/share.js" async></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lora&amp;subset=cyrillic" rel="stylesheet" async>
+    <script type="text/javascript" src="//vk.com/js/api/openapi.js?152" async></script>
+</head>
+
+<body>
+<div id="app"></div>
+<script src="<%= BASE_URL %>javascripts/fabric.min.js"></script>
+</body>
 </html>
